Add SessionManager dependency.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "AdminConsole/includes/tcpdf"]
 	path = AdminConsole/includes/tcpdf
 	url = git@gitlab.orneo.fr:legacy-ulteo/tcpdf.git
+[submodule "SessionManager/web/PEAR/php-saml"]
+	path = SessionManager/web/PEAR/php-saml
+	url = git@gitlab.orneo.fr:legacy-ulteo/php-saml.git
