--- a/SessionManager/config/apache2-vhost-ssl.conf
+++ b/SessionManager/config/apache2-vhost-ssl.conf
@@ -10,8 +10,15 @@
         <Directory /var/www/>
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride None
-                Order allow,deny
-                allow from all
+                # Apache 2.2
+                <IfModule !mod_authz_core.c>
+                    Order allow,deny
+                    allow from all
+                </IfModule>
+                # Apache 2.4
+                <IfModule mod_authz_core.c>
+                    Require all granted
+                </IfModule>
         </Directory>
 
         Include /etc/ulteo/sessionmanager/apache2.conf
