--- a/SessionManager/config/apache2-admin.conf.in
+++ b/SessionManager/config/apache2-admin.conf.in
@@ -3,13 +3,27 @@
 Alias /ovd/service/admin/wsdl @DATADIR@/ulteo/sessionmanager/admin/api.wsdl
 Alias /ovd/service/admin      @DATADIR@/ulteo/sessionmanager/admin/api.php
 <Location /ovd/service/admin>
-    Order allow,deny
-    allow from all
+    # Apache 2.2
+    <IfModule !mod_authz_core.c>
+        Order allow,deny
+        allow from all
+    </IfModule>
+    # Apache 2.4
+    <IfModule mod_authz_core.c>
+        Require all granted
+    </IfModule>
     php_admin_flag magic_quotes_gpc Off
 </Location>
 
 Alias /ovd/admin/base.tar.gz /var/cache/ulteo/sessionmanager/base.tar.gz
 <Location /ovd/admin/base.tar.gz>
-    Order allow,deny
-    allow from all
+    # Apache 2.2
+    <IfModule !mod_authz_core.c>
+        Order allow,deny
+        allow from all
+    </IfModule>
+    # Apache 2.4
+    <IfModule mod_authz_core.c>
+        Require all granted
+    </IfModule>
 </Location>
