--- a/OvdServer/setup.py.in
+++ b/OvdServer/setup.py.in
@@ -86,7 +86,10 @@ if sys.platform == "win32":
 	setup_args["zipfile"] = "lib/shared.zip"
 	setup_args["console"] = [ConsoleTarget()]
 	setup_args["service"] = [ServiceTarget()]
-	setup_args["options"] = {"py2exe": {"dll_excludes": ["w9xpopen.exe"]}}
+	setup_args["options"] = {"py2exe": {"dll_excludes": ["w9xpopen.exe",
+																											 "profapi.dll",
+																											 "USERENV.dll",
+																											 "KERNELBASE.dll"]}}
 
 
 elif sys.platform.startswith('linux'):
