--- a/packaging/debian/ovd-java-clients/lucid/control
+++ b/packaging/debian/ovd-java-clients/lucid/control
@@ -1,7 +1,7 @@
 Source: ovd-java-clients
 Section: utils
 Priority: optional
-Maintainer: David PHAM-VAN <d.pham-van@ulteo.com>
+Maintainer: Simon Nivault <simon.nivault@aznetwork.eu>
 Build-Depends: debhelper (>= 6), cdbs,
  default-jdk, ant, ant-optional, mingw32, libx11-dev, libjpeg62-dev, cmake,  icedtea-plugin | icedtea6-plugin
 Standards-Version: 3.8.2
