--- a/packaging/debian/ovd-l10n/lucid/control
+++ b/packaging/debian/ovd-l10n/lucid/control
@@ -1,7 +1,7 @@
 Source: ovd-l10n
 Section: utils
 Priority: optional
-Maintainer: David PHAM-VAN <d.pham-van@ulteo.com>
+Maintainer: Simon Nivault <simon.nivault@aznetwork.eu>
 Build-Depends: debhelper (>= 6), cdbs, make, gettext
 Standards-Version: 3.8.2
 
