--- a/packaging/debian/ovd-native-client/lucid/control
+++ b/packaging/debian/ovd-native-client/lucid/control
@@ -1,7 +1,7 @@
 Source: ovd-native-client
 Section: utils
 Priority: optional
-Maintainer: David PHAM-VAN <d.pham-van@ulteo.com>
+Maintainer: Simon Nivault <simon.nivault@aznetwork.eu>
 Build-Depends: debhelper (>= 6), cdbs, default-jdk, ant, ant-optional, gettext, icedtea-plugin | icedtea6-plugin, libpcsclite-dev
 Standards-Version: 3.8.2
 
