--- a/packaging/debian/ovd-web-client/lucid/control
+++ b/packaging/debian/ovd-web-client/lucid/control
@@ -1,7 +1,7 @@
 Source: ovd-web-client
 Section: net
 Priority: extra
-Maintainer: David PHAM-VAN <d.pham-van@ulteo.com>
+Maintainer: Simon Nivault <simon.nivault@aznetwork.eu>
 Build-Depends: cdbs, debhelper (>= 6), intltool
 Standards-Version: 3.7.2
 
